--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ main {
 }
 
 /* Classes */
+
 .answerBtn {
     width: 100%;
     height: 100%;
@@ -78,6 +79,8 @@ main {
 
 
 /* ID's */
+
+/* GameZone */
 #gameZone {
     margin-top: 2vh;
     min-width: 65vw;
@@ -111,6 +114,7 @@ main {
     flex-direction: column;
 }
 
+/* Countdown */
 #countDown {
     width: auto;
     height: 45vh;
@@ -126,6 +130,7 @@ main {
     color: var(--text-color-3);
 }
 
+/* Scoring */
 #scoreZone {
     font: 2.5vmax 'Graffiti', sans-serif;
     letter-spacing: 5px;
@@ -138,12 +143,14 @@ main {
     margin-bottom: 1vh;
 }
 
+/* Start Button */
 #startButton {
     font: 3vmax 'Graffiti', sans-serif;
     cursor: pointer;
     text-align: center;
     color: var(--text-color-4);
     margin-top: 1vh;
+    margin-left: 1vw;
 }
 
 #startButton:hover {
